# kronos-ctf

./: README.md
chall_1_fractured_lattices/chall_1/: cipher.txt
chall_1_fractured_lattices/chall_1_writeup/: README.md
chall_2_block_participants/chall_2/: .env.example  README.md  foundry.toml
chall_2_block_participants/chall_2/src/: Setup.sol  SiegeToken.sol
chall_2_block_participants/chall_2_writeup/: README.md
chall_2_blocks_participant/: .gitignore
chall_2_blocks_participant/script/: Exploit.s.sol
chall_2_blocks_participant/src/: SiegeProtocol.sol
chall_3_op_phantom_proof/chall_3/benches/: stark_bench.rs
chall_3_op_phantom_proof/chall_3/src/: lib.rs  main.rs
chall_3_op_phantom_proof/chall_3/src/air/: mod.rs  trace.rs
chall_3_op_phantom_proof/chall_3/src/field/: mod.rs
chall_3_op_phantom_proof/chall_3/src/fri/: query.rs
chall_3_op_phantom_proof/chall_3/src/hash/: params.rs
chall_3_op_phantom_proof/chall_3/src/merkle/: hash.rs  mod.rs
chall_3_op_phantom_proof/chall_3/src/poly/: mod.rs
chall_3_op_phantom_proof/chall_3/src/stark/: mod.rs  prover.rs  transcript.rs
chall_3_op_phantom_proof/chall_3_writeup/: README.md
op-phantom-proof/: Cargo.toml  README.md
op-phantom-proof/src/air/: rescue_air.rs
op-phantom-proof/src/field/: ops.rs
op-phantom-proof/src/fri/: fold.rs  mod.rs
op-phantom-proof/src/hash/: mod.rs  rescue.rs
op-phantom-proof/src/poly/: fft.rs
op-phantom-proof/src/stark/: deep.rs  types.rs  verifier.rs
