[package]
name = "phantom-stark"
version = "0.1.0"
edition = "2021"
description = "Operation Phantom Proof — STARK prover/verifier for Rescue-Prime"

[[bin]]
name = "phantom-stark"
path = "src/main.rs"

[lib]
name = "phantom_stark"
path = "src/lib.rs"

[dependencies]
sha2 = "0.10"
rand = "0.8"
byteorder = "1.5"
hex = "0.4"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
rand = "0.8"

[profile.release]
opt-level = 3
lto = true

[[bench]]
name = "stark_bench"
harness = false
